--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,9 +3,12 @@ annotated-types==0.7.0
 anyio==4.10.0
 astunparse==1.6.3
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
+cryptography==46.0.2
+deprecation==2.1.0
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.116.1
@@ -19,11 +22,14 @@ google-pasta==0.2.0
 greenlet==3.2.4
 grpcio==1.74.0
 h11==0.16.0
+h2==4.3.0
 h5py==3.14.0
+hpack==4.1.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 huggingface-hub==0.34.4
+hyperframe==6.1.0
 idna==3.10
 Jinja2==3.1.6
 keras==3.11.3
@@ -41,16 +47,20 @@ opt_einsum==3.4.0
 optree==0.17.0
 packaging==25.0
 pillow==11.3.0
+postgrest==2.21.1
 protobuf==6.32.0
 psycopg2==2.9.10
+pycparser==2.23
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyJWT==2.10.1
 python-decouple==3.8
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+realtime==2.21.1
 regex==2025.9.1
 requests==2.32.5
 rich==14.1.0
@@ -63,6 +73,11 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.47.2
+storage3==2.21.1
+StrEnum==0.4.15
+supabase==2.21.1
+supabase-auth==2.21.1
+supabase-functions==2.21.1
 sympy==1.14.0
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
