--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -96,3 +96,8 @@ watchfiles==1.1.0
 websockets==15.0.1
 Werkzeug==3.1.3
 wrapt==1.17.3
+
+# Authentication dependencies
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.20
