--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@
 fastapi==0.119.0
 Pillow==12.0.0
 pydantic==2.12.3
-pydantic_settings==2.11.0
+pydantic-settings==2.11.0
 pytest==8.4.2
 SQLAlchemy==2.0.44
 supabase==2.22.0
