--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,12 @@
     "react-native": "0.81.4",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
-    "react-native-web": "^0.21.0",
-    "react-native-maps": "1.20.1"
+    "react-native-toast-message": "^2.3.3",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
