--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ uvicorn==0.38.0
 psycopg2==2.9.11
 python-multipart==0.0.20
 torch==2.9.0+cpu
+pydantic[email]
 
 # Authentication dependencies
 python-jose[cryptography]==3.3.0
