--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.11.0",
-    "expo": "54.0.12",
+    "expo": "^54.0.12",
     "expo-av": "~16.0.7",
     "expo-camera": "~17.0.8",
     "expo-image-manipulator": "~14.0.7",
@@ -22,12 +22,12 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "1.20.1",
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/cli": "^54.0.16",
     "react-native-svg-transformer": "^1.5.1"
   },
   "private": true
